--- a/RChainVote/RChain_Vote_Frontend/package.json
+++ b/RChainVote/RChain_Vote_Frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.6.2",
     "core-js": "^3.29.0",
     "lodash": "^4.17.21",
     "roboto-fontface": "*",
